kubernetes/apps/storage/minio/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-public-media
  namespace: storage
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames:
    - "s3.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /authentik-media/
      backendRefs:
        - name: minio
          port: 9000
          weight: 1
